tests/ui/rfcs/rfc-2632-const-trait-impl/match-non-const-eq.stock.stderr
error[E0015]: cannot match on `str` in constant functions
  --> $DIR/match-non-const-eq.rs:6:9
   |
LL |         "a" => (),
   |         ^^^
   |
   = note: `str` cannot be compared in compile-time, and therefore cannot be used in `match`es
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
